image stretch fixed for blocks

--- a/static/template1.css
+++ b/static/template1.css
@@ -62,6 +62,7 @@ nav-element:hover {
 .tile img {
     padding: 0;
     width: 100%;
+    height: 100%;
     display: block;
     opacity: 1;
 }
